--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,12 @@ android {
 dependencies {
 
     /* Android */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "androidx.appcompat:appcompat:1.3.1"
+
+    /* Coroutines */
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
     /* Material */
     implementation "com.google.android.material:material:1.4.0"
@@ -68,6 +71,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
     androidTestImplementation "androidx.navigation:navigation-testing:2.3.5"
 
+    /* Coil */
+    implementation "io.coil-kt:coil:1.4.0"
+
     /* Moshi */
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
@@ -83,4 +89,8 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
+}
+
+android.sourceSets.all {
+    kotlin.srcDir("src/$name/kotlin")
 }
