--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "kotlin-kapt"
     id "androidx.navigation.safeargs.kotlin"
     id "io.objectbox"
+    id "kotlin-parcelize"
 }
 
 android {
