--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,18 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 	<application
+		android:name=".Application"
 		android:allowBackup="false"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
-		android:name=".Application"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.App.Splashscreen">
+		android:theme="@style/Theme.App">
 
 		<activity
 			android:name=".view.MainActivity"
-			android:exported="true">
+			android:exported="true"
+			android:theme="@style/Theme.App.Splashscreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
