--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 
     /* Coroutines */
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
 
     /* Material */
     implementation "com.google.android.material:material:1.4.0"
@@ -93,8 +94,13 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.1.2"
     testImplementation "io.insert-koin:koin-test:3.1.2"
 
+    /* Mockito */
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation "org.mockito:mockito-inline:2.13.0"
+
     /* Testing */
     testImplementation "junit:junit:4.13.2"
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
