--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,9 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.1.2"
     testImplementation "io.insert-koin:koin-test:3.1.2"
 
+    /* Palette */
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+
     /* Mockito */
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "org.mockito:mockito-inline:2.13.0"
